<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modifier">

    <EditText
        android:id="@+id/DescriptionModif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="434dp"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonCloseModif"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAjouterModif"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="38dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAjouterModif"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#673AB7"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/buttonHomeAjouterModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="HOME"
        android:backgroundTint="#FFFFFF"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#673AB7"
        app:icon="?attr/homeAsUpIndicator"
        app:iconTint="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:onClick="accesHomeModif"/>

    <TextView
        android:id="@+id/textViewAjouterModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rappel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonCloseModif"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="572dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="47dp"
        android:text="@string/envoyer"
        android:onClick="onClickClose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAjouterModif" />


    <EditText
        android:id="@+id/nomModif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:hint="@string/nom"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonCloseModif"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAjouterModif"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/spinnerModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="384dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomModif"
        app:layout_constraintVertical_bias="0.060000002"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewModif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="5dp"
        android:text="@string/priorit"
        app:layout_constraintBottom_toTopOf="@+id/spinnerModif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomModif" />

    <TextView
        android:id="@+id/textView2Modif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date du rappel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerModif"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp" />

    <CalendarView
        android:id="@+id/calendarViewModif"
        android:layout_width="224dp"
        android:layout_height="304dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2Modif" />

</androidx.constraintlayout.widget.ConstraintLayout>